# learning-repository

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .env.example  package.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.module.ts  main.ts
apps/web/: next.config.js  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  (+2 more)
docs/: API.md  GETTING_STARTED.md
docs/guides/: 01-prerequisites.md  02-tech-stack.md  03-project-structure.md  04-setup-guide.md  05-learning-path.md  06-resources.md  07-faq.md
docs/rust-service/: API.md  ARCHITECTURE.md  README.md  V2-SQLX-WALKTHROUGH.md
scripts/: clean-tmp.mjs  run-with-log.mjs
services/rust-doc-service/: Cargo.toml
services/rust-doc-service/data/uploads/: 12ee3008-5cb1-41db-b277-5757c42845a1.txt
services/rust-doc-service/migrations/: 0001_create_inspection_history.sql
services/rust-doc-service/src/: main.rs  tests.rs
services/rust-doc-service/src/core/: app_state.rs  config.rs  database.rs  error.rs  models.rs  repository.rs  storage.rs
services/rust-doc-service/src/domains/auth/: models.rs  service.rs
services/rust-doc-service/src/domains/documents/: models.rs
services/rust-doc-service/src/domains/folders/: models.rs
services/rust-doc-service/src/domains/inspection/: service.rs
services/rust-doc-service/src/domains/news/: models.rs
services/rust-doc-service/src/http/routes/: auth.rs  documents.rs  folders.rs  health.rs  inspect.rs  inspections.rs  mod.rs  news.rs  upload.rs
(+121 files in other folders)
